Added beer model

--- a/src/resources/elements/nav-bar/nav-bar.html
+++ b/src/resources/elements/nav-bar/nav-bar.html
@@ -1,12 +1,18 @@
 <template>
-        <md-navbar>
-                <a href="" class="brand-logo">
-                  <span>BeerHub</span>
-                </a>
-                <ul class="hide-on-med-and-down right">
-                  <li><a>About</a></li>
-                  <li><a>Installation</a></li>
-                  <li><a>Project Status</a></li>
-                </ul>
-              </md-navbar>
+  <md-navbar>
+    <a href="" class="brand-logo">
+      <span>BeerHub</span>
+    </a>
+    <ul class="hide-on-med-and-down right">
+      <li>
+        <a md-waves>About</a>
+      </li>
+      <li>
+        <a md-waves>Installation</a>
+      </li>
+      <li>
+        <a md-waves>Project Status</a>
+      </li>
+    </ul>
+  </md-navbar>
 </template>
